Add link to GitHub

--- a/ClujPugWeb/Index.html
+++ b/ClujPugWeb/Index.html
@@ -36,18 +36,27 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ol class="navbar-nav ml-auto" itemscope itemtype="http://schema.org/BreadcrumbList">
                     <li class="nav-item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-                        <a class="nav-link js-scroll-trigger" 
-                           href="#legenda" 
-                           itemscope 
+                        <a class="nav-link js-scroll-trigger"
+                           href="#legenda"
+                           itemscope
                            itemtype="http://schema.org/Thing"
                            itemprop="item">Legenda</a>
                     </li>
                     <li class="nav-item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-                        <a class="nav-link js-scroll-trigger" 
-                           href="#utruri" 
-                           itemscope 
+                        <a class="nav-link js-scroll-trigger"
+                           href="#utruri"
+                           itemscope
                            itemtype="http://schema.org/Thing"
                            itemprop="item">UTR-uri</a>
+                    </li>
+                    <li class="nav-item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+                        <a class="nav-link image-nav-link js-scroll-trigger"
+                           href="https://github.com/sorin-bolos/clujpugweb/"
+                           itemscope
+                           itemtype="http://schema.org/Thing"
+                           itemprop="item">
+                            <img src="Images/GitHub-Mark-Light-32px.png" height="20" />
+                        </a>
                     </li>
                 </ol>
             </div>
