Hide google api key

--- a/ClujPugWeb/Index.html
+++ b/ClujPugWeb/Index.html
@@ -22,7 +22,7 @@
     <link href="pug-styles.css" rel="stylesheet" />
     <script src="Scripts.js"></script>
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAwQyaIpFAeRv9p8nfLQ-OLRFEwCdEAbM4&callback=initMapElementToCluj">
+            src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAPS_API_KEY&callback=initMapElementToCluj">
     </script>
 </head>
 <body id="page-top">
