Switch to https

--- a/ClujPugWeb/wwwroot/Index.html
+++ b/ClujPugWeb/wwwroot/Index.html
@@ -14,7 +14,7 @@
 
     <title>PUG Cluj | Plan Urbanistic General - Cluj Napoca</title>
 
-    <link rel="alternate" hreflang="ro" href="http://clujpug.ro/" />
+    <link rel="alternate" hreflang="ro" href="https://clujpug.ro/" />
     <script type="application/ld+json" src="Seo/Breadcrumbs.json"></script>
 
     <link href="Theme/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
